UI Tweak for TabMaster and Added Primary Color and Others as SCSS Variable

--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -1,7 +1,7 @@
 .ReactTable .rt-thead .rt-th {
   font-size: 0.8rem !important;
   color: #000 !important;
-  background: #f3ffff !important; }
+  background: #e7f4ff !important; }
   .ReactTable .rt-thead .rt-th .style_Label {
     font-weight: bold !important;
     white-space: pre-line !important;
