--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,7 +44,7 @@
       border-top: 1px solid #e5e5e5;
       display: block;
       width: 100%;
-      background: #0000; }
+      background: #000; }
     :global .print-body .hospitalLogo {
       color: #ccc;
       text-align: center;
@@ -112,7 +112,7 @@
     :global .print-body .tableForData {
       width: 100%;
       border-collapse: collapse;
-      border: 1px solid #00babe;
+      border: 1px solid #77c0ff;
       font-weight: normal; }
     :global .print-body .tableForData thead {
       margin: 0;
@@ -128,14 +128,14 @@
       border-bottom: 2px dashed #979797;
       padding: 5px 3px; }
     :global .print-body .tableForData th {
-      border-bottom: 2px solid #34b8bc !important;
+      border-bottom: 2px solid #44a8ff !important;
       vertical-align: middle !important;
       background-color: #e8feff !important;
       padding: 5px;
       font-size: 0.75rem;
       text-transform: uppercase;
       text-align: center;
-      border-right: 1px solid rgba(52, 184, 188, 0.4); }
+      border-right: 1px solid #1190ff; }
     :global .print-body .tableForData td {
       border: 1px solid #ccc;
       padding: 3px;
@@ -198,7 +198,7 @@
     -webkit-border-radius: 3px;
     border-radius: 3px; }
   :global ::-webkit-scrollbar-thumb {
-    background: #00bcb0;
+    background: #77c0ff;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5); }
@@ -292,7 +292,7 @@
           float: right;
           line-height: 17px;
           margin-right: 6px;
-          color: #212529;
+          color: #000;
           margin-left: 10px; }
       :global .bordered-layout-radius ul li.active::after {
         content: "";
@@ -302,7 +302,7 @@
         width: 0;
         height: 0;
         border-top: 8px solid #f5232300;
-        border-left: 8px solid #44b8bd;
+        border-left: 8px solid #77c0ff;
         border-right: 8px solid transparent;
         border-bottom: 8px solid #e8e8e800;
         clear: both; }
@@ -351,7 +351,7 @@
       text-align: center; }
   :global .caption.caption-green .caption-subject,
   :global .caption.caption-green i {
-    color: #4db3a2;
+    color: #77c0ff;
     font-weight: 200; }
   :global .caption.caption-red .caption-subject,
   :global .caption.caption-red i {
@@ -405,9 +405,8 @@
     :global .actions .btn-primary:not(:disabled):not(.disabled).active,
     :global .actions .btn-primary:not(:disabled):not(.disabled):active,
     :global .actions .show > .btn-primary.dropdown-toggle {
-      background-color: none;
-      background-image: linear-gradient(to right, #34b8bc, #25d8df, #34b8bc, #25d8df);
-      border-color: #44b8bd; }
+      background-color: #44a8ff;
+      border-color: #77c0ff; }
   :global .pagination {
     margin: -3px 0 0;
     border-radius: 50px; }
@@ -471,7 +470,7 @@
   :global .actions .btn.btn-green:hover {
     color: #fff;
     box-shadow: none;
-    background: #00bcb0;
+    background: #77c0ff;
     border-color: #01968c; }
   :global .customRadio {
     border-bottom: 1px solid #eee;
@@ -514,13 +513,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customRadio .radio input[type="radio"]:checked + span {
-      color: #00bcb0; }
+      color: #77c0ff; }
     :global .customRadio .radio input[type="radio"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #00bcb0;
+      background: #77c0ff;
       left: 5px;
       top: 8px;
       border-radius: 100%;
@@ -568,13 +567,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span {
-      color: #00bcb0; }
+      color: #77c0ff; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #00bcb0;
+      background: #77c0ff;
       left: 5px;
       top: 8px;
       border-radius: 100%;
@@ -706,15 +705,14 @@
           text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
       :global .algaeh-modal .popupFooter .btn-primary {
         color: #fff;
-        background-color: none;
-        background-image: linear-gradient(to right, #34b8bc, #25d8df, #34b8bc, #25d8df);
-        border-color: #44b8bd; }
+        background-color: #44a8ff;
+        border-color: #1190ff; }
         :global .algaeh-modal .popupFooter .btn-primary:hover {
           background-color: none;
-          border-color: #44b8bd; }
+          border-color: #77c0ff; }
         :global .algaeh-modal .popupFooter .btn-primary:focus {
-          background-color: #34b8bc;
-          border-color: #34b8bc; }
+          background-color: #44a8ff;
+          border-color: #44a8ff; }
         :global .algaeh-modal .popupFooter .btn-primary.disabled, :global .algaeh-modal .popupFooter .btn-primary:disabled {
           opacity: 0.3;
           cursor: not-allowed; }
@@ -722,15 +720,14 @@
           background-color: #fff;
           border-color: #fff; }
       :global .algaeh-modal .popupFooter .btn-default {
-        color: #212529;
-        background-color: none;
-        background-image: linear-gradient(to right, #ffffff, #ececec, #ffffff, #ececec);
-        border-color: #b6b6b6; }
+        color: #1a1a1a;
+        background-color: #e6e6e6;
+        border-color: gray; }
         :global .algaeh-modal .popupFooter .btn-default:hover, :global .algaeh-modal .popupFooter .btn-default:focus {
-          background-color: none;
-          border-color: #b6b6b6; }
+          background-color: #cccccc;
+          border-color: #1a1a1a; }
       :global .algaeh-modal .popupFooter .btn-other {
-        color: #212529;
+        color: #000;
         border-color: #b6b6b6; }
         :global .algaeh-modal .popupFooter .btn-other:hover, :global .algaeh-modal .popupFooter .btn-other:focus {
           background-color: #e6e6e6; }
@@ -824,9 +821,9 @@
         text-transform: uppercase;
         min-width: 70px; }
       :global .algaeh-modal-Ar .popupFooter .btn-primary {
-        background: #34b8bc;
         color: #fff;
-        border: 1px solid #34b8bc; }
+        background-color: #44a8ff;
+        border-color: #1190ff; }
       :global .algaeh-modal-Ar .popupFooter .btn-default {
         background: #efefef;
         color: #5a5a5a;
@@ -862,7 +859,7 @@
       text-align: left;
       font-weight: bold;
       text-transform: uppercase;
-      color: #44b8bd;
+      color: #77c0ff;
       border: none; }
     :global .cashReciptStyles .table-report .table tbody td:first-child {
       color: #696969;
@@ -1017,7 +1014,7 @@
         :global .tabMaster ul li:after {
           display: block;
           content: "";
-          border-bottom: solid 3px #34b8bc;
+          border-bottom: 3px solid #44a8ff;
           transform: scaleX(0);
           transition: transform 150ms ease-in-out; }
         :global .tabMaster ul li:hover:after {
@@ -1035,10 +1032,10 @@
         border: none !important;
         cursor: pointer; }
       :global .tabMaster ul li.active label {
-        border-bottom: 3px solid #238386;
+        border-bottom: 3px solid #1190ff;
         color: #fff;
         cursor: pointer;
-        background: #34b8bc;
+        background: #44a8ff;
         text-shadow: 0 1px 1px #868686; }
   :global .divInner {
     overflow-y: auto;
