--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -4,10 +4,10 @@ header {
   border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
 
 .mainTheme {
-  background: #34b8bc;
+  background: #44a8ff;
   color: #fff;
   padding: 0 1rem;
-  border-bottom: 1px solid #008587; }
+  border-bottom: 1px solid #1190ff; }
 
 .mainPageArea {
   position: fixed;
@@ -17,13 +17,13 @@ header {
   overflow-x: hidden; }
 
 .sideMenuBars {
-  border-right: 1px solid #00999c;
+  border-right: 1px solid #77c0ff;
   margin-left: -15px;
   padding: 15px;
   cursor: pointer;
   background: linear-gradient(to right, rgba(228, 171, 89, 0.76) 0%, rgba(0, 186, 190, 0.1) 100%); }
   .sideMenuBars:hover {
-    background: #00999c; }
+    background: #77c0ff; }
 
 .topNavbar-title {
   font-size: 1.2rem;
@@ -48,7 +48,7 @@ header {
   background: none;
   font-size: 1rem;
   color: #fff;
-  border-left: 1px solid #009689;
+  border-left: 1px solid #77c0ff;
   margin-top: -21px; }
   .btn-userProfile i {
     margin: 3px; }
@@ -68,7 +68,7 @@ header {
     font-size: 0.9rem; }
     #simple-menu ul li i {
       margin-right: 15px;
-      color: #34b8bc;
+      color: #44a8ff;
       font-size: 1rem; }
   #simple-menu hr {
     margin: 5px 0;
@@ -117,7 +117,7 @@ header {
 
 .hptl-phase1-sideMenuBar .side-menu-title:hover {
   background: #fff;
-  color: #00bcb0; }
+  color: #77c0ff; }
 
 .hptl-phase1-sideMenuBar .side-menu-arrow {
   margin-top: 5px; }
@@ -158,7 +158,7 @@ header {
         .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li:hover i {
           color: #fff; }
       .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li.active {
-        background: #00bcb0;
+        background: #77c0ff;
         color: #fff; }
         .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li.active i {
           color: #fff; }
@@ -217,7 +217,7 @@ header {
     }
   }
   .side-menu-title:hover {
-    background: rgb(0, 188, 176);
+    background:  lighten($primary-color, 10%);
     i {
       text-shadow: 0px 2px 0px #000;
     }
@@ -255,12 +255,12 @@ header {
       }
     }
     li:hover {
-      background: rgb(0, 188, 176);
+      background:  lighten($primary-color, 10%);
       color: #fff;
     }
 
     li.active {
-      background: rgb(0, 188, 176);
+      background:  lighten($primary-color, 10%);
       color: #fff;
     }
   }
@@ -337,7 +337,7 @@ header {
 
 .navTopbar-dropdown {
   padding: 15px;
-  border-left: 1px solid #009c9e;
+  border-left: 1px solid #77c0ff;
   margin: 0;
   margin-right: -15px;
   cursor: pointer; }
@@ -354,9 +354,9 @@ header {
       .navTopbar-dropdown .dropdown-menu .dropdown-item i {
         margin-right: 0.5rem; }
       .navTopbar-dropdown .dropdown-menu .dropdown-item:hover {
-        color: #00999c; }
+        color: #77c0ff; }
   .navTopbar-dropdown:hover {
-    background: #00999c; }
+    background: #77c0ff; }
     .navTopbar-dropdown:hover .dropdown-menu {
       display: block; }
 
