--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -4,10 +4,10 @@ header {
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
 .mainTheme {
-  background: #34b8bc;
+  background: $primary-color;
   color: #fff;
   padding: 0 1rem;
-  border-bottom: 1px solid #008587;
+  border-bottom: 1px solid darken($primary-color, 10%);
 }
 .mainPageArea {
   position: fixed;
@@ -17,7 +17,7 @@ header {
   overflow-x: hidden;
 }
 .sideMenuBars {
-  border-right: 1px solid #00999c;
+  border-right: 1px solid lighten($primary-color, 10%);
   margin-left: -15px;
   padding: 15px;
   cursor: pointer;
@@ -27,7 +27,7 @@ header {
     rgba(0, 186, 190, 0.1) 100%
   );
   &:hover {
-    background: #00999c;
+    background: lighten($primary-color, 10%);
   }
 }
 .topNavbar-title {
@@ -57,7 +57,7 @@ header {
   background: none;
   font-size: 1rem;
   color: #fff;
-  border-left: 1px solid #009689;
+  border-left: 1px solid lighten($primary-color, 10%);
   margin-top: -21px;
   i {
     margin: 3px;
@@ -81,7 +81,7 @@ header {
       font-size: 0.9rem;
       i {
         margin-right: 15px;
-        color: #34b8bc;
+        color: $primary-color;
         font-size: 1rem;
       }
     }
@@ -139,7 +139,7 @@ header {
   }
   .side-menu-title:hover {
     background: #fff;
-    color: rgb(0, 188, 176);
+    color: lighten($primary-color, 10%);
   }
   .side-menu-arrow {
     margin-top: 5px;
@@ -185,7 +185,7 @@ header {
           }
         }
         &.active {
-          background: rgb(0, 188, 176);
+          background: lighten($primary-color, 10%);
           color: #fff;
           i {
             color: #fff;
@@ -251,7 +251,7 @@ header {
     }
   }
   .side-menu-title:hover {
-    background: rgb(0, 188, 176);
+    background:  lighten($primary-color, 10%);
     i {
       text-shadow: 0px 2px 0px #000;
     }
@@ -289,12 +289,12 @@ header {
       }
     }
     li:hover {
-      background: rgb(0, 188, 176);
+      background:  lighten($primary-color, 10%);
       color: #fff;
     }
 
     li.active {
-      background: rgb(0, 188, 176);
+      background:  lighten($primary-color, 10%);
       color: #fff;
     }
   }
@@ -376,7 +376,7 @@ header {
 }
 .navTopbar-dropdown {
   padding: 15px;
-  border-left: 1px solid #009c9e;
+  border-left: 1px solid lighten($primary-color, 10%);
   margin: 0;
   margin-right: -15px;
   cursor: pointer;
@@ -394,12 +394,12 @@ header {
         margin-right: 0.5rem;
       }
       &:hover {
-        color: #00999c;
+        color: lighten($primary-color, 10%);
       }
     }
   }
   &:hover {
-    background: #00999c;
+    background: lighten($primary-color, 10%);
     .dropdown-menu {
       display: block;
     }
