--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -39,7 +39,7 @@ body {
     -webkit-transition: width 2s; /* Safari */
     transition: width 2s;
     i {
-      text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+      text-shadow: 0px 1px 1px lighten($color-black, 10%);
     }
   }
   .btn:hover {
@@ -59,79 +59,69 @@ body {
       text-align: center;
     }
   }
+
   .btn-primary {
-    color: #fff;
-    background-color: none;
-    background-image: linear-gradient(
-      to right,
-      #34b8bc,
-      #25d8df,
-      #34b8bc,
-      #25d8df
-    );
-    //box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
-    border-color: #44b8bd;
-  }
-
-  .btn-primary:hover {
-    background-color: none;
-    border-color: #44b8bd;
-  }
-
-  .btn-primary:active,
-  .btn-primary:focus {
-    background-color: #34b8bc;
-    border-color: #34b8bc;
-  }
-
-  .btn-primary.disabled,
-  .btn-primary:disabled {
-    opacity: 0.3;
-    cursor: not-allowed;
+    color: $color-white;
+    background-color: $primary-color;
+    border-color: darken($primary-color, 10%);
+    &:hover {
+      background-color: none;
+      border-color: lighten($primary-color, 10%);
+    }
+    &:focus {
+      background-color: $primary-color;
+      border-color: $primary-color;
+    }
+    &.disabled,
+    &:disabled {
+      opacity: 0.3;
+      cursor: not-allowed;
+    }
+    &:active {
+      background-color: $color-white;
+      border-color: $color-white;
+    }
   }
 
   .btn-default {
-    color: #212529;
-    background-color: none;
-    background-image: linear-gradient(
-      to right,
-      #ffffff,
-      #ececec,
-      #ffffff,
-      #ececec
-    );
-    //box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
-    border-color: rgb(182, 182, 182);
+    color: lighten($color-black, 10%);
+    background-color: lighten($color-black, 90%);
+    border-color: lighten($color-black, 50%);
+    &:hover,
+    &:focus {
+      background-color: lighten($color-black, 80%);
+      border-color: lighten($color-black, 10%);
+    }
   }
-  .btn-default:hover,
-  .btn-default:focus {
-    background-color: none;
+
+  .btn-other {
+    color: $color-black;
     border-color: rgb(182, 182, 182);
-  }
-  .btn-primary:active {
-    background-color: #fff;
-    border-color: #fff;
+    &:hover,
+    &:focus {
+      background-color: rgb(230, 230, 230);
+    }
   }
 
   .inner-top-search {
-    background: rgba(255, 255, 255, 0.5);
+    background: $color-white;
     border-radius: 0;
     border: none;
-    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+    border-bottom: 1px dashed lighten($color-black, 80%);
     margin-bottom: 10px;
     padding-top: 5px;
   }
   .algaehLabelGroup {
     font-weight: bold;
-    color: #575b5e;
+    color: $color-black;
     position: absolute;
     top: -11px;
     left: 5px;
-    background: #f9f9f9;
+    background: $color-white;
     padding: 2px 6px 4px;
   }
   .algaehLabelFormGroup {
-    border: 1px solid #c1c1c1;
+    border: 1px solid lighten($color-black, 80%);
     padding-top: 15px;
     margin-bottom: 20px;
     h6 {
@@ -139,10 +129,10 @@ body {
     }
   }
   .image-drop-area {
-    border: 1px solid #93a4ad;
+    border: 1px solid lighten($color-black, 90%);
     min-height: 101px;
     position: relative;
-    background-color: #eaeaea;
+    background-color: lighten($color-black, 90%);
     .dropzone {
       min-width: 100%;
       min-height: 100%;
@@ -153,7 +143,7 @@ body {
 
     .drop-message {
       // font-size: 14px;
-      color: #485a63;
+      color: lighten($color-black, 10%);
       margin: 8px 0px;
       min-width: 130px;
       padding-left: 0px;
@@ -164,18 +154,17 @@ body {
         display: inline-block;
         width: 33.33%;
         padding: 5px;
-        background: #8c8c8c;
+        background: lighten($primary-color, 10%);
         cursor: pointer;
         text-align: center;
-        color: #fff;
+        color: $color-white;
         &:hover {
-          background: #34b8bc;
+          background: $primary-color;
         }
       }
     }
     .img-upload-progress {
-      background-color: none;
-      background-image: linear-gradient(to left, #34b8bc, #25d8df);
+      background-color: $primary-color;
       height: 26px;
       width: 100%;
       position: absolute;
@@ -186,9 +175,9 @@ body {
       text-align: right;
       font-size: 0.7rem;
       padding: 0 5px 0 0;
-      color: #fff;
+      color: $color-white;
       line-height: 23px;
-      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+      text-shadow: 0 1px 1px lighten($color-black, 10%);
     }
     .img-upload-loader {
       position: absolute;
@@ -197,16 +186,16 @@ body {
       text-align: center;
       i {
         font-size: 2rem;
-        color: #34b8bc;
+        color: $primary-color;
       }
     }
   }
 
   .image-ins-drop-area {
-    border: 1px solid #93a4ad;
+    border: 1px solid lighten($color-black, 10%);
     min-height: 80px;
     position: relative;
-    background-color: #eaeaea;
+    background-color: lighten($color-black, 10%);
     .dropzone {
       min-width: 100%;
       min-height: 100%;
@@ -218,7 +207,7 @@ body {
 
     .drop-message {
       // font-size: 14px;
-      color: #485a63;
+      color: lighten($color-black, 10%);
       margin: 8px 0px;
       min-width: 130px;
       padding-left: 0px;
@@ -234,7 +223,7 @@ body {
     position: relative;
     width: 16px;
     height: 16px;
-    border: 1px solid rgba(1, 1, 1, 0.54);
+    border: 1px solid lighten($color-black, 10%);
     border-radius: 50%;
     outline: none;
     vertical-align: middle;
@@ -245,13 +234,13 @@ body {
     }
 
     &:checked {
-      border: 1px solid #e5e5e5;
+      border: 1px solid lighten($color-black, 10%);
       &:focus {
         outline: none;
       }
       &::before {
         content: "";
-        background: #44b6ae;
+        background: lighten($primary-color, 10%);
         display: block;
         position: absolute;
         width: 8px;
@@ -267,19 +256,19 @@ body {
     font-size: 0.8rem;
     text-transform: uppercase;
     border-radius: 5px;
-    background-color: #44b6ae;
-    border: solid 1px #44b6ae;
-    color: #fff;
+    background-color: lighten($primary-color, 10%);
+    border: solid 1pxlighten ($primary-color, 10%);
+    color: $color-white;
     padding: 2px 20px;
     margin: 0 !important;
     cursor: pointer;
 
     &:hover {
-      background-color: #44b6ae;
+      background-color: lighten($primary-color, 10%);
     }
 
     &:active {
-      background-color: #44b6ae;
+      background-color: lighten($primary-color, 10%);
       box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
       border: solid 1px #68509f;
     }
@@ -300,22 +289,22 @@ body {
     text-transform: uppercase;
     border-radius: 5px;
     background-color: transparent;
-    border: solid 1px #44b6ae;
-    color: #44b6ae;
+    border: solid 1pxlighten ($primary-color, 10%);
+    color: lighten($primary-color, 10%);
     padding: 2px 20px;
     margin: 0 !important;
     cursor: pointer;
 
     &:hover {
-      color: #44b6ae;
-      border: solid 1px #44b6ae;
-      background-color: #fff;
+      color: lighten($primary-color, 10%);
+      border: solid 1pxlighten ($primary-color, 10%);
+      background-color: $color-white;
     }
 
     &:active {
-      color: #44b6ae;
-      border: solid 1px #44b6ae;
-      background-color: #fff;
+      color: lighten($primary-color, 10%);
+      border: solid 1pxlighten ($primary-color, 10%);
+      background-color: $color-white;
     }
 
     &:disabled {
@@ -331,21 +320,21 @@ body {
     text-transform: uppercase;
     border-radius: 5px;
     background-color: transparent;
-    border: 1px solid #fff;
-    color: #fff;
+    border: 1px solid $color-white;
+    color: $color-white;
     padding: 2px 10px;
     cursor: pointer;
     margin: 0 !important;
 
     &:hover {
-      background-color: #fff;
-      border: 1px solid #fff;
+      background-color: $color-white;
+      border: 1px solid $color-white;
       color: #000;
     }
 
     &:active {
-      background-color: #fff;
-      border: 1px solid #fff;
+      background-color: $color-white;
+      border: 1px solid $color-white;
       color: #000;
     }
 
@@ -658,7 +647,7 @@ body {
     }
     .btn-other {
       background: none;
-      color: #fff;
+      color: $color-white;
       border: 1px solid #efefef;
     }
   }
@@ -666,7 +655,7 @@ body {
   .hptl-phase1-master-footer {
     .main {
       background-color: #fff !important;
-      border-top: 1px solid #fff;
+      border-top: 1px solid $color-white;
       padding: 10px;
       height: 40px;
       width: 100%;
@@ -719,25 +708,25 @@ input[type="type"] {
   padding: 4px 6px 4px;
   border: 1px solid #d3d3d3;
   border-radius: 4px;
-  background: #fff;
+  background: $color-white;
   width: 100%;
 }
 
 input:disabled::-webkit-input-placeholder {
   /* WebKit browsers */
-  color: #fff;
+  color: $color-white;
 }
 input:disabled:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
-  color: #fff;
+  color: $color-white;
 }
 input:disabled::-moz-placeholder {
   /* Mozilla Firefox 19+ */
-  color: #fff;
+  color: $color-white;
 }
 input:disabled:-ms-input-placeholder {
   /* Internet Explorer 10+ */
-  color: #fff;
+  color: $color-white;
 }
 
 input[type="color"] {
@@ -770,7 +759,7 @@ input.autoselect-input {
   position: absolute;
   top: 24px;
   left: 16px;
-  background: #fff;
+  background: $color-white;
   padding: 3px 6px;
   color: #616161;
 }
@@ -819,7 +808,7 @@ textarea {
     text-transform: uppercase;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
-    background: #fff;
+    background: $color-white;
   }
   input[type="date"]::-webkit-calendar-picker-indicator,
   input[type="month"]::-webkit-calendar-picker-indicator,
@@ -1030,7 +1019,7 @@ th {
   background-color: #dbad64;
 
   h2 {
-    color: #fff;
+    color: $color-white;
     font-size: 3rem;
     label {
       font-weight: 500;
@@ -1115,7 +1104,7 @@ th {
     padding: 4px 6px 4px;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
-    background: #fff;
+    background: $color-white;
     text-align: right;
   }
   input[type="color"] {
@@ -1136,7 +1125,7 @@ th {
     padding: 4px 6px 4px;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
-    background: #fff;
+    background: $color-white;
     text-align: right;
   }
 
@@ -1150,7 +1139,7 @@ th {
     position: absolute;
     top: 24px;
     left: 16px;
-    background: #fff;
+    background: $color-white;
     padding: 3px 6px;
     color: #616161;
   }
@@ -1371,7 +1360,7 @@ th {
     background-color: #dbad64;
 
     h2 {
-      color: #fff;
+      color: $color-white;
       font-size: 3rem;
       label {
         font-weight: 500;
@@ -1428,7 +1417,7 @@ th {
   border-radius: 3px;
   background-color: #000;
   background-color: hsla(0, 0%, 20%, 0.9);
-  color: #fff;
+  color: $color-white;
   content: attr(data-tooltip);
   text-align: center;
   font-size: 0.6rem;
@@ -1503,7 +1492,7 @@ th {
     }
     &.active {
       background-color: #dbad64;
-      color: #fff;
+      color: $color-white;
       pointer-events: none;
       border-color: #dbad64;
     }
@@ -1619,13 +1608,13 @@ th {
 .Image-cropper {
   position: fixed;
   border: 5px solid #d5ac70;
-  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 20px 20px $color-black;
   box-shadow: 0 20px 50px #999999;
   top: 10vh;
   z-index: 9;
   padding-bottom: 31px;
   overflow: hidden;
-  background: #fff;
+  background: $color-white;
   right: 2vw;
   padding: 2px 2px 33px;
 
@@ -1669,7 +1658,7 @@ th {
   width: 640px;
   height: 480px;
   margin: auto;
-  box-shadow: 0 30px 100px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 30px 100px lighten($color-black, 10%);
   video {
     background: #000;
   }
@@ -1680,13 +1669,13 @@ th {
     top: 4px;
     i {
       padding: 10px;
-      background: #8c8c8c;
+      background: lighten($color-black, 10%);
       font-size: 1.1rem;
       text-align: center;
       line-height: 30px;
       display: inline;
       margin-left: 2px;
-      color: #fff;
+      color: $color-white;
       cursor: pointer;
       &:last-child {
         background: #68b5b9;
