--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.css
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.css
@@ -119,7 +119,7 @@
       .selfServiceModule .EmployeeTopNav .tabMaster ul li:after {
         display: block;
         content: "";
-        border-bottom: solid 3px #00a9ad;
+        border-bottom: 3px solid #34b8bc;
         transform: scaleX(0);
         transition: transform 150ms ease-in-out; }
       .selfServiceModule .EmployeeTopNav .tabMaster ul li:hover:after {
@@ -131,7 +131,7 @@
         color: #858585;
         cursor: pointer; }
       .selfServiceModule .EmployeeTopNav .tabMaster ul li span.active {
-        border-bottom: solid 3px #00a9ad;
+        border-bottom: 3px solid #34b8bc;
         color: #fff;
         background: #34b8bc; }
         .selfServiceModule .EmployeeTopNav .tabMaster ul li span.active:hover {
