--- a/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/SelfService.scss
@@ -1,3 +1,4 @@
+@import "../../../styles/algaehCssVariables.scss";
 .selfServiceModule {
   .EmployeeProfile {
     .EmployeeInfo-Top {
@@ -67,7 +68,7 @@
           margin: 0;
           padding: 0;
           b {
-            color: #34b8bc;
+            color: $primary-color;
             font-weight: 300;
             font-size: 1rem;
           }
@@ -88,7 +89,7 @@
             width: 20px;
           }
           b {
-            color: #34b8bc;
+            color: $primary-color;
           }
         }
       }
@@ -102,7 +103,7 @@
         span {
           display: block;
           b {
-            color: #34b8bc;
+            color: $primary-color;
           }
         }
       }
@@ -118,7 +119,7 @@
           margin-right: 8px;
 
           b {
-            color: #34b8bc;
+            color: $primary-color;
           }
         }
       }
@@ -158,7 +159,7 @@
           &:after {
             display: block;
             content: "";
-            border-bottom: solid 3px #00a9ad;
+            border-bottom: 3px solid $primary-color;
             transform: scaleX(0);
             transition: transform 150ms ease-in-out;
           }
@@ -173,9 +174,9 @@
             cursor: pointer;
           }
           span.active {
-            border-bottom: solid 3px #00a9ad;
+            border-bottom: 3px solid $primary-color;
             color: #fff;
-            background: #34b8bc;
+            background: $primary-color;
             &:hover {
               cursor: default;
               color: #fff;
@@ -189,7 +190,7 @@
         }
       }
       .Employee-quick-info {
-        color: #34b8bc;
+        color: $primary-color;
         margin: 0;
         padding: 0;
         list-style: none;
