--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,7 +112,7 @@
     :global .print-body .tableForData {
       width: 100%;
       border-collapse: collapse;
-      border: 1px solid #77c0ff;
+      border: 1px solid #53ccd0;
       font-weight: normal; }
     :global .print-body .tableForData thead {
       margin: 0;
@@ -128,14 +128,14 @@
       border-bottom: 2px dashed #979797;
       padding: 5px 3px; }
     :global .print-body .tableForData th {
-      border-bottom: 2px solid #44a8ff !important;
+      border-bottom: 2px solid #34b8bc !important;
       vertical-align: middle !important;
       background-color: #e8feff !important;
       padding: 5px;
       font-size: 0.75rem;
       text-transform: uppercase;
       text-align: center;
-      border-right: 1px solid #1190ff; }
+      border-right: 1px solid #299194; }
     :global .print-body .tableForData td {
       border: 1px solid #ccc;
       padding: 3px;
@@ -198,7 +198,7 @@
     -webkit-border-radius: 3px;
     border-radius: 3px; }
   :global ::-webkit-scrollbar-thumb {
-    background: #77c0ff;
+    background: #53ccd0;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5); }
@@ -207,7 +207,9 @@
   :global .displayInlineBlock {
     display: inline-block; }
   :global .greenCell {
-    background-color: #acffc0 !important; }
+    background-color: #67d2d5 !important;
+    color: #34b8bc !important;
+    text-decoration: underline !important; }
   :global .cancelledClass {
     background-color: #ff400080 !important;
     color: white;
@@ -302,7 +304,7 @@
         width: 0;
         height: 0;
         border-top: 8px solid #f5232300;
-        border-left: 8px solid #77c0ff;
+        border-left: 8px solid #53ccd0;
         border-right: 8px solid transparent;
         border-bottom: 8px solid #e8e8e800;
         clear: both; }
@@ -351,7 +353,7 @@
       text-align: center; }
   :global .caption.caption-green .caption-subject,
   :global .caption.caption-green i {
-    color: #77c0ff;
+    color: #53ccd0;
     font-weight: 200; }
   :global .caption.caption-red .caption-subject,
   :global .caption.caption-red i {
@@ -405,8 +407,8 @@
     :global .actions .btn-primary:not(:disabled):not(.disabled).active,
     :global .actions .btn-primary:not(:disabled):not(.disabled):active,
     :global .actions .show > .btn-primary.dropdown-toggle {
-      background-color: #44a8ff;
-      border-color: #77c0ff; }
+      background-color: #34b8bc;
+      border-color: #53ccd0; }
   :global .pagination {
     margin: -3px 0 0;
     border-radius: 50px; }
@@ -470,7 +472,7 @@
   :global .actions .btn.btn-green:hover {
     color: #fff;
     box-shadow: none;
-    background: #77c0ff;
+    background: #53ccd0;
     border-color: #01968c; }
   :global .customRadio {
     border-bottom: 1px solid #eee;
@@ -513,13 +515,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customRadio .radio input[type="radio"]:checked + span {
-      color: #77c0ff; }
+      color: #53ccd0; }
     :global .customRadio .radio input[type="radio"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #77c0ff;
+      background: #53ccd0;
       left: 5px;
       top: 8px;
       border-radius: 100%;
@@ -567,13 +569,13 @@
       z-index: 1;
       opacity: 0; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span {
-      color: #77c0ff; }
+      color: #53ccd0; }
     :global .customCheckbox .checkbox input[type="checkbox"]:checked + span:before {
       content: "";
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #77c0ff;
+      background: #53ccd0;
       left: 5px;
       top: 8px;
       border-radius: 100%;
@@ -705,16 +707,19 @@
           text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
       :global .algaeh-modal .popupFooter .btn-primary {
         color: #fff;
-        background-color: #44a8ff;
-        border-color: #1190ff; }
+        background-color: #34b8bc;
+        border-color: #299194; }
         :global .algaeh-modal .popupFooter .btn-primary:hover {
-          background-color: none;
-          border-color: #77c0ff; }
+          background-color: #299194;
+          border-color: #53ccd0; }
         :global .algaeh-modal .popupFooter .btn-primary:focus {
-          background-color: #44a8ff;
-          border-color: #44a8ff; }
+          background-color: #34b8bc;
+          border-color: #34b8bc; }
         :global .algaeh-modal .popupFooter .btn-primary.disabled, :global .algaeh-modal .popupFooter .btn-primary:disabled {
           opacity: 0.3;
+          color: #fff;
+          background-color: #34b8bc;
+          border-color: #299194;
           cursor: not-allowed; }
         :global .algaeh-modal .popupFooter .btn-primary:active {
           background-color: #fff;
@@ -822,8 +827,8 @@
         min-width: 70px; }
       :global .algaeh-modal-Ar .popupFooter .btn-primary {
         color: #fff;
-        background-color: #44a8ff;
-        border-color: #1190ff; }
+        background-color: #34b8bc;
+        border-color: #299194; }
       :global .algaeh-modal-Ar .popupFooter .btn-default {
         background: #efefef;
         color: #5a5a5a;
@@ -859,7 +864,7 @@
       text-align: left;
       font-weight: bold;
       text-transform: uppercase;
-      color: #77c0ff;
+      color: #53ccd0;
       border: none; }
     :global .cashReciptStyles .table-report .table tbody td:first-child {
       color: #696969;
@@ -1014,7 +1019,7 @@
         :global .tabMaster ul li:after {
           display: block;
           content: "";
-          border-bottom: 3px solid #44a8ff;
+          border-bottom: 3px solid #34b8bc;
           transform: scaleX(0);
           transition: transform 150ms ease-in-out; }
         :global .tabMaster ul li:hover:after {
@@ -1032,10 +1037,10 @@
         border: none !important;
         cursor: pointer; }
       :global .tabMaster ul li.active label {
-        border-bottom: 3px solid #1190ff;
+        border-bottom: 3px solid #299194;
         color: #fff;
         cursor: pointer;
-        background: #44a8ff;
+        background: #34b8bc;
         text-shadow: 0 1px 1px #868686; }
   :global .divInner {
     overflow-y: auto;
