--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -294,7 +294,9 @@
   }
 
   .greenCell {
-    background-color: #acffc0 !important;
+    background-color: lighten($primary-color, 15%) !important;
+    color: $primary-color !important;
+    text-decoration: underline !important;
   }
 
   .cancelledClass {
@@ -979,7 +981,7 @@
         background-color: $primary-color;
         border-color: darken($primary-color, 10%);
         &:hover {
-          background-color: none;
+          background-color: darken($primary-color, 10%);
           border-color: lighten($primary-color, 10%);
         }
         &:focus {
@@ -989,6 +991,10 @@
         &.disabled,
         &:disabled {
           opacity: 0.3;
+
+          color: $color-white;
+          background-color: $primary-color;
+          border-color: darken($primary-color, 10%);
           cursor: not-allowed;
         }
         &:active {
