--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -11,6 +11,6 @@ $subMenu: 0.85rem;
 
 //App Colors
 
-$primary-color: #44a8ff; // #34b8bc;
+$primary-color: #34b8bc;
 $color-white: #fff;
 $color-black: #000;
