--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -43,6 +43,7 @@ body {
     }
   }
   .btn:hover {
+    cursor: pointer;
     background-position: 100% 0;
     -moz-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
@@ -99,11 +100,12 @@ body {
   }
 
   .btn-other {
-    color: $color-black;
-    border-color: rgb(182, 182, 182);
+    background: none;
+    color: $color-white;
+    border: 1px solid lighten($color-white, 10%);
     &:hover,
     &:focus {
-      background-color: rgb(230, 230, 230);
+      background-color: lighten($color-black, 10%);
     }
   }
 
@@ -652,7 +654,11 @@ body {
     .btn-other {
       background: none;
       color: $color-white;
-      border: 1px solid #efefef;
+      border: 1px solid lighten($color-white, 10%);
+      &:hover,
+      &:focus {
+        background-color: lighten($color-black, 10%);
+      }
     }
   }
 
