Fixed UI bugs and Functional bugs

--- a/client/src/Components/EmployeeManagement/HRSettings/EmployeeGroups/employee_groups.css
+++ b/client/src/Components/EmployeeManagement/HRSettings/EmployeeGroups/employee_groups.css
@@ -4,3 +4,6 @@
   border-radius: 5px;
   border: 1px solid #d3d3d3;
   background: #ffff; }
+
+#empGrpGrid_Cntr .ReactTable {
+  max-height: 72vh !important; }
