--- a/client/src/Components/EmployeeManagement/HRSettings/EmployeeDesignations/emp_dsgntn.scss
+++ b/client/src/Components/EmployeeManagement/HRSettings/EmployeeDesignations/emp_dsgntn.scss
@@ -5,3 +5,8 @@
   border: 1px solid #d3d3d3;
   background: #ffff;
 }
+#empDsgnDivGrid_Cntr {
+  .ReactTable {
+    max-height: 72vh !important;
+  }
+}
