--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -1,72 +1,72 @@
-.hrTimeSheet .weekdaysDiv i {
-  cursor: pointer; }
-  .hrTimeSheet .weekdaysDiv i:hover {
-    color: #34b8bc; }
-
-.hrTimeSheet .weekdaysDiv span {
-  font-size: 0.8rem;
-  margin: 0 10px; }
-
-.hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress {
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-  padding-top: 10px;
-  padding-bottom: 10px; }
-  .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress {
-    height: 0.5rem;
-    margin-top: 0.6rem; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span {
-      background: rgba(0, 0, 0, 0.7);
-      position: absolute;
-      z-index: 9;
-      top: -22px;
-      padding: 2px 5px;
-      border-radius: 5px;
-      display: none; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span b {
-        display: inline-block;
-        text-align: center;
-        border-left: 1px solid rgba(255, 255, 255, 0.5);
-        padding-left: 5px;
-        margin-left: 5px; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .lateTime {
-        color: #ff5c40; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .OverTime {
-        color: #17d217; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span::after {
-        content: " ";
+.hrTimeSheet {
+  margin-bottom: 80px; }
+  .hrTimeSheet .weekdaysDiv i {
+    cursor: pointer; }
+    .hrTimeSheet .weekdaysDiv i:hover {
+      color: #34b8bc; }
+  .hrTimeSheet .weekdaysDiv span {
+    font-size: 0.8rem;
+    margin: 0 10px; }
+  .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress {
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+    padding-top: 10px;
+    padding-bottom: 10px; }
+    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress {
+      height: 0.5rem;
+      margin-top: 0.6rem; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span {
+        background: rgba(0, 0, 0, 0.7);
         position: absolute;
-        top: 100%;
-        /* At the bottom of the tooltip */
-        left: 50%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkIn {
-      left: 15px; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .totalHr {
-      left: 42.5%; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkOut {
-      right: 15px; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress:hover span {
-      display: block; }
-  .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off {
-    height: 0.3rem; }
-    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off .progress-bar {
-      background-color: #ffeba0 !important; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off .progress-bar span {
-        background: #ffffff;
-        width: auto;
-        display: inline-block;
-        padding: 2px 10px;
-        font-size: 0.7rem;
-        margin: auto;
-        position: absolute;
-        left: 35.5vw;
-        border: 1px solid #c3c3c3;
-        color: #202429;
-        border-radius: 5px; }
-  .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .bg-default {
-    background-color: #e7ecef !important; }
-  .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress:last-child {
-    border-bottom: none; }
+        z-index: 9;
+        top: -22px;
+        padding: 2px 5px;
+        border-radius: 5px;
+        display: none; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span b {
+          display: inline-block;
+          text-align: center;
+          border-left: 1px solid rgba(255, 255, 255, 0.5);
+          padding-left: 5px;
+          margin-left: 5px; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .lateTime {
+          color: #ff5c40; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .OverTime {
+          color: #17d217; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span::after {
+          content: " ";
+          position: absolute;
+          top: 100%;
+          /* At the bottom of the tooltip */
+          left: 50%;
+          margin-left: -5px;
+          border-width: 5px;
+          border-style: solid;
+          border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkIn {
+        left: 15px; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .totalHr {
+        left: 42.5%; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkOut {
+        right: 15px; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress:hover span {
+        display: block; }
+    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off {
+      height: 0.3rem; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off .progress-bar {
+        background-color: #ffeba0 !important; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .week-off .progress-bar span {
+          background: #ffffff;
+          width: auto;
+          display: inline-block;
+          padding: 2px 10px;
+          font-size: 0.7rem;
+          margin: auto;
+          position: absolute;
+          left: 35.5vw;
+          border: 1px solid #c3c3c3;
+          color: #202429;
+          border-radius: 5px; }
+    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .bg-default {
+      background-color: #e7ecef !important; }
+    .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress:last-child {
+      border-bottom: none; }
