--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -87,7 +87,7 @@
   max-width: 22vw;
   min-width: -webkit-fill-available;
   left: 0;
-  max-height: 30vh;
+  max-height: 700%;
   overflow: auto;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
