changes with semantic ui

--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -96,13 +96,13 @@
     border-left: 1px solid rgb(206, 212, 216);
   }
 }
-.text {
-  background-color: #ffffff;
-  color: #000000;
-  display: inline-block;
-  height: 75px;
-  padding-left: 16px;
-}
+// .text {
+//   background-color: #ffffff;
+//   color: #000000;
+//   display: inline-block;
+//   height: 75px;
+//   padding-left: 16px;
+// }
 
 .internal-label {
   font-size: 0.9rem;
