--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -8,6 +8,7 @@ header {
   color: #fff;
   padding: 0 1rem;
   border-bottom: 1px solid darken($primary-color, 10%);
+  height: 53px;
 }
 .mainPageArea {
   position: fixed;
