--- a/client/src/Components/Dashboard/dashboard.scss
+++ b/client/src/Components/Dashboard/dashboard.scss
@@ -43,6 +43,7 @@
     .icon-big {
       i {
         min-height: 3.5rem;
+        font-size: 2.5em;
       }
       .fa-hand-holding-usd {
         &:before {
