--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -7,7 +7,8 @@ header {
   background: #34b8bc;
   color: #fff;
   padding: 0 1rem;
-  border-bottom: 1px solid #299194; }
+  border-bottom: 1px solid #299194;
+  height: 53px; }
 
 .mainPageArea {
   position: fixed;
