--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -25,8 +25,8 @@ body {
     }
   }
   .btn {
+    font-size: 0.9em !important !important;
     padding: 5px 10px;
-
     text-transform: uppercase;
     background-size: 300% 100%;
     -moz-transition: all 0.2s ease-in-out;
@@ -638,10 +638,10 @@ body {
     padding: 5px 15px;
     z-index: 1080;
     button {
+      font-size: 0.9em;
       float: right;
       margin-left: 10px;
       padding: 5px 10px;
-
       text-transform: uppercase;
       min-width: 70px;
     }
@@ -811,8 +811,9 @@ textarea {
     border: 1px solid #d3d3d3;
     border-radius: 4px;
     background: $color-white;
-    font-weight: 700;
     font-size: 0.9em;
+    height: 30px;
+    font-weight: 700;
   }
   input[type="date"]::-webkit-calendar-picker-indicator,
   input[type="month"]::-webkit-calendar-picker-indicator,
