--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -5,7 +5,7 @@ $fontWeight: normal;
 $moz-osx-font-smoothing: grayscale;
 $webkit-font-smoothing: antialiased !important;
 $outline-width: 0;
-//$textFontSize: 0.78rem;
+$textFontSize: 0.8em;
 $mainMenu: 0.85rem;
 $subMenu: 0.85rem;
 
