--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -20,6 +20,7 @@ body {
     border-right: 1px solid #505050 !important;
     width: 80% !important;
     color: #fff !important;
+    font-size: 1em !important;
     &::placeholder {
       color: rgb(180, 180, 180) !important;
     }
