--- a/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeMasterIndex/EmployeeMaster/PersonalDetails/PersonalDetails.scss
@@ -5,9 +5,10 @@
     border-bottom: 1px dashed #d3d3d3;
     span {
       border-bottom: 2px solid #8c8c8c;
-      
+
       text-transform: uppercase;
       line-height: 0;
+      font-size: 0.8em;
     }
   }
 
