--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -145,7 +145,8 @@ header {
         padding: 8px 5px 8px 13px;
         display: inline-block;
         width: 78%;
-        border-left: 1px solid #f7f7f7; }
+        border-left: 1px solid #f7f7f7;
+        font-size: 0.8em; }
       .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li:hover {
         background: #afafaf; }
         .hptl-phase1-sideMenuBar .sub-menu-option ul.tree-structure-menu li:hover i {
@@ -176,7 +177,8 @@ header {
   position: absolute;
   right: 19px;
   top: 14px;
-  color: #fff; }
+  color: #fff;
+  font-size: 1.5em; }
 
 .hptl-phase1-sideMenuBar .sideBarClose:hover {
   color: #00bcb0;
