--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -174,6 +174,7 @@ header {
           display: inline-block;
           width: 78%;
           border-left: 1px solid #f7f7f7;
+          font-size: 0.8em;
         }
         &:hover {
           background: #afafaf;
@@ -214,6 +215,7 @@ header {
     right: 19px;
     top: 14px;
     color: #fff;
+    font-size: 1.5em;
   }
   .sideBarClose:hover {
     color: #00bcb0;
