--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -17,11 +17,13 @@ body {
   background: none !important;
   border-right: 1px solid #505050 !important;
   width: 80% !important;
-  color: #fff !important; }
+  color: #fff !important;
+  font-size: 1em !important; }
   :global .subMenuSearchFld::placeholder {
     color: #b4b4b4 !important; }
 
 :global .btn {
+  font-size: 0.9em !important !important;
   padding: 5px 10px;
   text-transform: uppercase;
   background-size: 300% 100%;
@@ -520,6 +522,7 @@ body {
   padding: 5px 15px;
   z-index: 1080; }
   :global .hptl-phase1-footer button {
+    font-size: 0.9em;
     float: right;
     margin-left: 10px;
     padding: 5px 10px;
@@ -564,7 +567,7 @@ body {
 
 label {
   margin-bottom: 0px;
-  font-size: 100%;
+  font-size: 0.8em;
   text-transform: uppercase;
   font-weight: 100;
   -moz-osx-font-smoothing: grayscale;
@@ -577,7 +580,7 @@ input[type="email"],
 input[type="password"],
 input[type="time"],
 input[type="type"] {
-  font-size: 0.78rem;
+  font-size: 0.8em;
   padding: 4px 6px 4px;
   border: 1px solid #d3d3d3;
   border-radius: 4px;
@@ -601,7 +604,7 @@ input:disabled:-ms-input-placeholder {
   color: #fff; }
 
 input[type="color"] {
-  font-size: 0.78rem;
+  font-size: 0.8em;
   -webkit-appearance: none;
   height: 29px;
   padding: 0;
@@ -631,7 +634,7 @@ input.autoselect-input {
   color: #616161; }
 
 textarea {
-  font-size: 0.78rem !important;
+  font-size: 0.8em !important;
   padding: 8px 6px 7px !important;
   border: 1px solid #d3d3d3 !important;
   border-radius: 4px !important;
@@ -667,7 +670,10 @@ textarea {
     text-transform: uppercase;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
-    background: #fff; }
+    background: #fff;
+    font-size: 0.9em;
+    height: 30px;
+    font-weight: 700; }
   .algaeh-datePicker input[type="date"]::-webkit-calendar-picker-indicator,
   .algaeh-datePicker input[type="month"]::-webkit-calendar-picker-indicator,
   .algaeh-datePicker input[type="year"]::-webkit-calendar-picker-indicator {
@@ -795,10 +801,10 @@ th {
  for dropdown list
 */
 .Select-menu-outer {
-  font-size: 0.78rem; }
+  font-size: 0.8em; }
 
 .Select-multi-value-wrapper {
-  font-size: 0.78rem; }
+  font-size: 0.8em; }
 
 .Select-placeholder,
 .Select--single > .Select-control .Select-value {
@@ -867,7 +873,7 @@ th {
     text-align: right; }
   .algaeh_Arabic_Version label {
     margin-bottom: 0px;
-    font-size: 100%;
+    font-size: 0.8em;
     text-transform: uppercase;
     font-weight: 100;
     -moz-osx-font-smoothing: grayscale;
@@ -879,14 +885,14 @@ th {
   .algaeh_Arabic_Version button:focus {
     outline: none; }
   .algaeh_Arabic_Version input[type="text"] {
-    font-size: 0.78rem;
+    font-size: 0.8em;
     padding: 4px 6px 4px;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
     background: #fff;
     text-align: right; }
   .algaeh_Arabic_Version input[type="color"] {
-    font-size: 0.78rem;
+    font-size: 0.8em;
     -webkit-appearance: none;
     width: 32px;
     height: 29px;
@@ -897,7 +903,7 @@ th {
     overflow: hidden;
     text-align: right; }
   .algaeh_Arabic_Version input[type="file"] {
-    font-size: 0.78rem;
+    font-size: 0.8em;
     padding: 4px 6px 4px;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
@@ -915,7 +921,7 @@ th {
     padding: 3px 6px;
     color: #616161; }
   .algaeh_Arabic_Version textarea {
-    font-size: 0.78rem !important;
+    font-size: 0.8em !important;
     padding: 8px 6px 7px !important;
     border: 1px solid #d3d3d3 !important;
     border-radius: 4px !important; }
@@ -1021,9 +1027,9 @@ th {
   .algaeh_Arabic_Version .primary-details {
     padding-bottom: 10px; }
   .algaeh_Arabic_Version .Select-menu-outer {
-    font-size: 0.78rem; }
+    font-size: 0.8em; }
   .algaeh_Arabic_Version .Select-multi-value-wrapper {
-    font-size: 0.78rem; }
+    font-size: 0.8em; }
   .algaeh_Arabic_Version .Select-placeholder,
   .algaeh_Arabic_Version .Select--single > .Select-control .Select-value {
     padding-left: 0px; }
