Grid Dropdown and rowFilter class added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1031,6 +1031,9 @@
   max-width: 85%;
   padding: 0.5rem; }
 
+.ui.search.selection.dropdown > input.search {
+  padding: 0.64em 0.5em; }
+
 .ui.selection.dropdown > .delete.icon,
 .ui.selection.dropdown > .dropdown.icon,
 .ui.selection.dropdown > .search.icon {
