--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -1,40 +1,40 @@
+@import "../../styles/algaehCssVariables.scss";
 .login {
   font-family: "Roboto", sans-serif;
   min-width: 100%;
   min-height: 100%;
-
-  input[type="text"] {
-    padding: 8px 10px;
-    border-radius: 5px;
-    overflow: hidden;
-    background: #fff;
-    border: 1px solid #3a95aa;
-  }
-  input[type="password"] {
-    padding: 8px 10px;
-    border-radius: 5px;
-    overflow: hidden;
-    background: #fff;
-    border: 1px solid #3a95aa;
-    width: 100%;
-  }
-  .showall {
-    position: absolute;
-    top: 0;
-    padding: 5px 11px;
-    right: 0;
-    background: #fff;
-    color: #929292;
-    cursor: pointer;
-    margin: 2px;
-    height: 32px;
+  .LoginCntrHdg {
+    margin-top: 0.7em;
+    text-align: center;
+    color: $primary-color;
+    font-size: 2em;
   }
 
-  .clearall {
-    top: 4px;
-    right: 31px;
+  .form-group {
+    margin-bottom: 0.7em;
+  }
+  .ui.input > input {
+    min-height: 40px !important;
+    max-height: 40px !important;
+    padding: 0.3em 0.5em;
+    font-size: 1em;
   }
 
+  .ui.fluid.dropdown {
+    min-height: 40px !important;
+    max-height: 40px !important;
+
+    .text {
+      padding: 0.9em;
+      max-width: 90%;
+    }
+
+    .delete.icon,
+    .dropdown.icon,
+    .search.icon {
+      padding: 1em;
+    }
+  }
   .margintop15 {
     margin-top: 9%;
   }
@@ -53,47 +53,38 @@
   }
   .frgtPass {
     text-align: center;
-
+    font-size: 12px;
     margin-top: 20px;
     margin-bottom: 0;
   }
-  .sign-btn {
-    box-shadow: 0 5px 0 #2a7688;
-    border: 1px solid #48a0bb;
-    color: #fff;
-    background-size: 300% 100%;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-  }
-  .sign-btn:hover {
-    box-shadow: 0 3px 0 #35879a;
-    border: 1px solid #48b1ca;
-    background-position: 100% 0;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-  }
 
   .btn-primary {
-    color: #fff;
-    background-color: none;
-    background-image: linear-gradient(
-      to right,
-      #34b8bc,
-      #25d8df,
-      #34b8bc,
-      #25d8df
-    );
-    // box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
-    border-color: #44b8bd;
+    color: $color-white;
+    background-color: $primary-color;
+    border-color: darken($primary-color, 10%);
+    &:hover {
+      background-color: darken($primary-color, 10%);
+      border-color: lighten($primary-color, 10%);
+    }
+    &:focus {
+      background-color: $primary-color;
+      border-color: $primary-color;
+    }
+    &.disabled,
+    &:disabled {
+      opacity: 0.3;
+
+      color: $color-white;
+      background-color: $primary-color;
+      border-color: darken($primary-color, 10%);
+      cursor: not-allowed;
+    }
+    &:active {
+      background-color: $color-white;
+      border-color: $color-white;
+    }
   }
-  .btn-primary:hover {
-    background-color: none;
-    border-color: #44b8bd;
-  }
+
   .checkbox {
     font-weight: normal;
     margin-bottom: 10px;
@@ -139,6 +130,7 @@
   width: 100%;
   text-align: center;
   color: #fff;
+  font-size: 0.7rem;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
   a {
     text-decoration: none;
